monitor/local/overlays/prometheus/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  template:
    spec:
      containers:
        - name: prometheus
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 500m
              memory: 500Mi
              ephemeral-storage: 5Gi
          volumeMounts:
            - name: prometheus-storage
              mountPath: /prometheus
      volumes:
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus-storage
